# iota-bindings

./: .gitignore  .gitmodules
emscripten/: Cargo.toml
emscripten/src/: lib.rs  main.rs
include/iota/: ctrits.h  iota.h  mam.h  merkle.h  trytes.h  tx_v2.h
native-shared/: Cargo.toml
native-shared/src/: lib.rs
native-static/: Cargo.toml  remove_methods.sh
native-static/src/: lib.rs
native-static/src/custom_alloc/: mod.rs  stub_alloc.rs
nodejs/: README.md  package.json
nodejs/native/: Cargo.toml
python/: .gitignore  Cargo.toml  setup.py
rlib/: Cargo.toml
rlib/src/: ctrits.rs  lib.rs
shared/: Cargo.toml
shared/src/: ctrits.rs  lib.rs
tests/: CMakeLists.txt
tests/src/: ctrits.cc  include_c.c  mam.cc  trytes.cc
