[package]
name = "iota-bindings-emscripten"
version = "0.1.0"
authors = ["Andreas C. Osowski <andreas@osowski.de>"]

[[bin]]
name = "IOTA"
path = "src/main.rs"
doc = false
doctest = false
test = false

[features]
default = ["mam", "iotars"]
mam = ["iota-bindings-rlib/mam"]
iotars = ["iota-bindings-rlib/iotars"]

[dependencies]
iota-bindings-rlib  = { path = "../rlib", default-features = false }

