[package]
name = "iota-bindings-rlib"
version = "0.1.0"
authors = ["Andreas C. Osowski <andreas@osowski.de>"]
keywords = ["no_std"]

[lib]
path = "src/lib.rs"
test = true
doc = true 
doctest = true
crate-type = ["rlib"]

[dependencies]
iota-bindings = { git = "https://github.com/iotaledger/iota.rs.git" }
iota-mam-bindings = { git = "https://github.com/iotaledger/MAM.git" }
iota-bindings-shared = { path = "../shared" }



