[package]
name = "iota-bindings-rlib"
version = "0.1.0"
authors = ["Andreas C. Osowski <andreas@osowski.de>"]
keywords = ["no_std"]

[lib]
path = "src/lib.rs"
test = true
doc = true 
doctest = true
crate-type = ["rlib"]

[features]
default = ["mam","iotars"]
mam = ["iota-mam-bindings"]
iotars = ["iota-bindings"]

[dependencies]
cty = { git = "https://github.com/japaric/cty.git" }
iota-bindings = { git = "https://github.com/iotaledger/iota.rs.git", optional = true }
iota-mam-bindings = { git = "https://github.com/iotaledger/MAM.git", optional = true }
iota-bindings-shared = { path = "../shared" }



